[operator] implement 🍓 user 🐝 accessmode (#105)
Allow to grant access on database to user and add 2 tests to make sure it is working when there is a database and user for it.
