# mysql-operator/agent/model_user.go
@@ -12,7 +12,6 @@ package agent
 
 // User struct for User
 type User struct {
-	Username string  `json:"username"`
-	Password string  `json:"password"`
-	Grants   []Grant `json:"grants,omitempty"`
+	Username string `json:"username"`
+	Password string `json:"password"`
 }
